--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - m2-autoconf  # [win]
     - m2-automake{{ am_version }}  # [win]
     - m2-libtool  # [win]
-    - pkg-config  # [not win]
+    - pkg-config
     - m2-base  # [win]
     - {{ compiler('c') }}        # [unix]
     - {{ stdlib("c") }}          # [unix]
@@ -31,7 +31,6 @@ requirements:
     - {{ stdlib("m2w64_c") }}    # [win]
     - make  # [unix]
   host:
-    pkg-config  # [win]
 
 test:
   commands:
